--- a/requirements.txt
+++ b/requirements.txt
@@ -55,3 +55,6 @@ markdown==2.6.2
 
 # Issue: certifi-2015.9.6.1 and 2015.9.6.2 fail verification (https://github.com/certifi/python-certifi/issues/26)
 certifi==2015.4.28
+
+# X-Ray SDK
+aws-xray-sdk==2.12.0
